Fixes some z-index problem with the audio player

--- a/aawiki/static/aawiki/css/aa.wiki.css
+++ b/aawiki/static/aawiki/css/aa.wiki.css
@@ -21,6 +21,11 @@ body {
     height: 100%;
 }
 
+audio#resource {
+    z-index: 999;
+    position: relative;
+}
+
 #canvas {
     position: fixed;
     outline: 1px solid grey;
